@@ -729,4 +729,6 @@ x^6 + 10/7*x^5 - 867/49*x^4 - 76/245*x^3 + 3148/35*x^2 - 25944/245*x + 48771
 10
 10
 [0]
-Total time spent: 1385595334334
+[x + (-314226370217524044*y + 1473852319020386314), x + (314226370217524044*
+y - 1473852319020386314)]~
+Total time spent: 8061
