@@ -104,3 +104,5 @@ test(polcyclo(503),3)
 test(polcyclo(211),18446744073709551667)
 
 nfroots(a^2+1,x^2)
+
+do(y^2-22,x^2+926246528884912528275985458927067632*y-4344481316563541186659879867597013188)
